configuration update in order to fix issues with test classes